CNCF/AppDefinitionDevelopment/ContinuousIntegrationDelivery/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
spec:
  rules:
  - host: yakir-jenkins.yakir.com
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.205.105
    - ip: 172.20.205.106
    - ip: 172.20.205.98
